local-provider: Remove warning about .Trash folder

When $HOME/.local/share/bijiben directory doesn't exist, application
creates it, but it also complaints about another directory that doesn't
exist: $HOME/.local/share/bijiben/.Trash.

This patch removes that warning message because the .Trash directory
will be created anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=783471